--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회원 탈퇴 안내 - YourGame</title>
+    <title>Guardians of defence war 회원 탈퇴 안내</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -43,7 +43,7 @@
 <body>
     <div class="container">
         <h1>회원 탈퇴 안내</h1>
-        <p>안녕하세요! YourGame의 회원 탈퇴 방법을 안내드립니다.</p>
+        <p>안녕하세요! Guardians of defence war의 회원 탈퇴 방법을 안내드립니다.</p>
         
         <h2>회원 탈퇴 방법</h2>
         <p>게임 내에서 회원 탈퇴를 진행하려면 아래 단계를 따라 주세요:</p>
